--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
 #banner {
     width: 100%;
     margin-top: 10px;
@@ -19,4 +24,10 @@
     display: block;
     border-bottom: 5px solid red;
     animation: borderAnimate 1s;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
 }
